[#114] moved responsive styles to a separate file and fixed v-tooltip click/touchend visibility

--- a/packages/spa/src/assets/sass/_components.scss
+++ b/packages/spa/src/assets/sass/_components.scss
@@ -431,6 +431,9 @@
             margin: 0 0 $smallSpacing;
         }
     }
+    .popover-holder & {
+        max-width: 100%;
+    }
 
     // states
     &.active,
