--- a/packages/spa/src/assets/sass/_popup.scss
+++ b/packages/spa/src/assets/sass/_popup.scss
@@ -151,6 +151,7 @@
         vertical-align: middle;
         margin: $baseSpacing 0 $largeSpacing;
         width: 550px;
+        max-width: 100%;
         text-align: left;
         .popup-close-handle {
             position: absolute;
